Applied materialfx default theme look

--- a/src/main/resources/com/bsmi/attendancesystem/css/login-style.css
+++ b/src/main/resources/com/bsmi/attendancesystem/css/login-style.css
@@ -7,13 +7,16 @@
 }
 
 .left-form {
-    -fx-background-color: #3580BB;
+    -fx-background-color: #9400FF;
 }
 .bootstrap-color-Basic{
     -fx-background-color: #f0f0f0;
 }
 .login-button{
-    -fx-background-color:#3580BB;
+    -fx-background-color:#9400FF;
     -fx-font-size:18;
     -fx-font-color:#ffffff;
+}
+.text-color{
+    -fx-text-fill:#9400FF;
 }
