--- a/src/main/resources/com/bsmi/attendancesystem/fxml/login-view.fxml
+++ b/src/main/resources/com/bsmi/attendancesystem/fxml/login-view.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="938.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bsmi.attendancesystem.AttendanceController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="938.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bsmi.attendancesystem.LoginController">
     <children>
         <AnchorPane prefHeight="583.0" prefWidth="938.0">
             <children>
-                <AnchorPane layoutY="-18.0" prefHeight="583.0" prefWidth="469.0" styleClass="left-form" stylesheets="@css/login-style.css" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane layoutY="-18.0" prefHeight="583.0" prefWidth="469.0" styleClass="left-form" stylesheets="@../css/login-style.css" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
                         <Label layoutX="69.0" layoutY="354.0" text="Attendance System" textAlignment="CENTER" textFill="WHITE">
                             <font>
@@ -27,7 +27,7 @@
                 </AnchorPane>
                 <AnchorPane layoutX="471.0" prefHeight="583.0" prefWidth="469.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
-                  <MFXButton fx:id="closeMFXButton" contentDisplay="CENTER" layoutX="400.0" layoutY="14.0" minWidth="45.0" onAction="#closeMFXButtonOnAction" prefHeight="32.0" prefWidth="45.0" stylesheets="@css/login-style.css" text=" " AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <MFXButton fx:id="closeMFXButton" contentDisplay="CENTER" layoutX="400.0" layoutY="14.0" minWidth="45.0" onAction="#closeMFXButtonOnAction" prefHeight="32.0" prefWidth="45.0" stylesheets="@../css/login-style.css" text=" " AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <styleClass>
                         <String fx:value="mfx-button" />
                         <String fx:value="close" />
@@ -40,7 +40,7 @@
                         </FontIcon>
                      </graphic>
                   </MFXButton>
-                        <Label layoutX="121.0" layoutY="189.0" styleClass="text-color" stylesheets="@css/login-style.css" text="Welcome Back">
+                        <Label layoutX="121.0" layoutY="189.0" styleClass="text-color" stylesheets="@../css/login-style.css" text="Welcome Back">
                             <font>
                                 <Font name="System Bold" size="28.0" />
                             </font>
@@ -66,7 +66,7 @@
                         <Cursor fx:constant="TEXT" />
                      </cursor>
                         </MFXPasswordField>
-                        <MFXButton fx:id="loginButton" defaultButton="true" layoutX="83.0" layoutY="474.0" onAction="#loginButtonOnAction" prefHeight="50.0" prefWidth="300.0" stylesheets="@css/login-style.css" text="Login" textFill="WHITE">
+                        <MFXButton fx:id="loginButton" defaultButton="true" layoutX="83.0" layoutY="474.0" onAction="#loginButtonOnAction" prefHeight="50.0" prefWidth="300.0" stylesheets="@../css/login-style.css" text="Login" textFill="WHITE">
                             <font>
                                 <Font name="Calibri" size="18.0" />
                             </font>
